--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cobe": "^0.6.3",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.9.0",
+    "gsap": "^3.12.5",
     "iron-session": "^8.0.3",
     "lucide-react": "^0.440.0",
     "next": "14.2.10",
@@ -43,12 +44,12 @@
     "next-themes": "^0.3.0",
     "npm": "^10.8.3",
     "nylas": "^7.5.2",
-    "react": "^18",
+    "react": "18.2.0",
     "react-aria": "^3.34.3",
     "react-aria-components": "^1.3.3",
     "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "18.2.0",
     "react-spring": "^9.7.4",
     "react-stately": "^3.32.2",
     "recharts": "^2.12.7",
