--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.9.0",
     "gsap": "^3.12.5",
+    "install": "^0.13.0",
     "iron-session": "^8.0.3",
     "lucide-react": "^0.440.0",
     "next": "14.2.10",
@@ -45,6 +46,7 @@
     "npm": "^10.8.3",
     "nylas": "^7.5.2",
     "react": "18.2.0",
+    "react-icons": "^5.3.0",
     "react-aria": "^3.34.3",
     "react-aria-components": "^1.3.3",
     "react-countup": "^6.5.3",
@@ -53,6 +55,7 @@
     "react-spring": "^9.7.4",
     "react-stately": "^3.32.2",
     "recharts": "^2.12.7",
+    "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
