--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "warn", // Change to 'error' if you want it to be an error
+    "react-hooks/exhaustive-deps": "warn" // Change to 'error' if you want it to be an error
+  }
 }
