--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "next dev",
-  "build": "prisma generate && next build",
-  "start": "next start",
-  "lint": "next lint"
-
-
+    "dev": "next dev",
+    "build": "prisma generate && next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.0",
@@ -16,6 +14,7 @@
     "@conform-to/react": "^1.1.5",
     "@conform-to/zod": "^1.1.5",
     "@internationalized/date": "^3.5.5",
+    "@netlify/plugin-nextjs": "^5.7.3",
     "@nylas/react": "^1.1.3",
     "@phosphor-icons/react": "^2.1.7",
     "@prisma/client": "5.20.0",
@@ -48,12 +47,12 @@
     "npm": "^10.8.3",
     "nylas": "^7.5.2",
     "react": "18.2.0",
-    "react-icons": "^5.3.0",
     "react-aria": "^3.34.3",
     "react-aria-components": "^1.3.3",
     "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
+    "react-icons": "^5.3.0",
     "react-spring": "^9.7.4",
     "react-stately": "^3.32.2",
     "recharts": "^2.12.7",
