--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "install": "^0.13.0",
     "iron-session": "^8.0.3",
     "lucide-react": "^0.440.0",
-    "next": "14.2.10",
+    "next": "^14.2.14",
     "next-auth": "^5.0.0-beta.21",
     "next-themes": "^0.3.0",
     "npm": "^10.8.3",
