--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@netlify/plugin-nextjs": "^5.7.3",
     "@nylas/react": "^1.1.3",
     "@phosphor-icons/react": "^2.1.7",
-    "@prisma/client": "5.20.0",
+    "@prisma/client": "^5.20.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
